# app/Versions/Admin/Http/Resources/OrderResource.php
@@ -4,6 +4,7 @@ namespace App\Versions\Admin\Http\Resources;
 
 use App\Models\Order;
 use App\Versions\Private\Http\Resources\CouponResource;
+use App\Versions\Private\Http\Resources\OrderItemResource;
 use App\Versions\Private\Http\Resources\ProductResource;
 use Illuminate\Http\Request;
 use App\Http\Resources\JsonResource;
@@ -14,13 +15,13 @@ final class OrderResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
-            'id'           => $this->id,
-            'total_amount' => $this->total_amount,
-            'status'       => $this->status,
-            'products'     => ProductResource::collection($this->whenLoaded('products')),
-            'coupon'       => CouponResource::make($this->whenLoaded('coupon')),
-            'created_at'   => $this->formatDateTime($this->created_at),
-            'updated_at'   => $this->formatDateTime($this->updated_at),
+            'id'         => $this->id,
+            'total_amount'     => $this->total_amount,
+            'status'     => $this->status,
+            'items'      => OrderItemResource::collection($this->whenLoaded('items')),
+            'coupon'     => CouponResource::make($this->whenLoaded('coupon')),
+            'created_at' => $this->formatDateTime($this->created_at),
+            'updated_at' => $this->formatDateTime($this->updated_at),
         ];
     }
 }
